Colaboratory を使用して作成しました

--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlibtutorials.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8mTGhdjZMBmtsBnQzMrPC",
+      "authorship_tag": "ABX9TyMuTg2o6s8z6MWsI5w/6wyl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "plt.plot(data) # x,y形式でなくてもplotできる\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -609,7 +609,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -669,7 +669,7 @@
         "    out = ax.plot(data1, data2, **param_dict)\n",
         "    return out"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -698,7 +698,7 @@
         "fig, ax = plt.subplots(1, 1)\n",
         "my_plotter(ax, data1, data2, {'marker': 'x'})"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +750,7 @@
         "my_plotter(ax1, data1, data2, {'marker': 'x'})\n",
         "my_plotter(ax2, data3, data4, {'marker': 'o'})"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -856,196 +856,50 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "S5GVQMWEvUdp"
+        "id": "_k5G8en0wXUj"
       },
       "source": [
-        "# いまここ なう\n"
+        "# pyplot"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sDZyE1astgB0"
+        "id": "GyVfSWSDw3rh"
       },
       "source": [
         "\n",
         "\n",
-        "Prior to version 1.0, ``show()`` generally could not be called\n",
-        "more than once in a single script (although sometimes one\n",
-        "could get away with it); for version 1.0.1 and above, this\n",
-        "restriction is lifted, so one can write a script like this::\n",
         "\n",
-        "    import numpy as np\n",
-        "    import matplotlib.pyplot as plt\n",
+        "Intro to pyplot\n",
+        ":mod:matplotlib.pyplot is a collection of functions that make matplotlib work like MATLAB. Each pyplot function makes some change to a figure: e.g., creates a figure, creates a plotting area in a figure, plots some lines in a plotting area, decorates the plot with labels, etc.\n",
         "\n",
-        "    plt.ioff()\n",
-        "    for i in range(3):\n",
-        "        plt.plot(np.random.rand(10))\n",
-        "        plt.show()\n",
+        "In :mod:matplotlib.pyplot various states are preserved across function calls, so that it keeps track of things like the current figure and plotting area, and the plotting functions are directed to the current axes (please note that \"axes\" here and in most places in the documentation refers to the axes part of a figure <figure_parts> and not the strict mathematical term for more than one axis).\n",
         "\n",
-        "which makes three plots, one at a time. I.e. the second plot will show up,\n",
-        "once the first plot is closed.\n",
+        "Note\n",
+        "the pyplot API is generally less-flexible than the object-oriented API. Most of the function calls you see here can also be called as methods from an ``Axes`` object. We recommend browsing the tutorials and examples to see how this works.\n",
         "\n",
-        "### Summary\n",
-        "\n",
-        "In interactive mode, pyplot functions automatically draw\n",
-        "to the screen.\n",
-        "\n",
-        "When plotting interactively, if using\n",
-        "object method calls in addition to pyplot functions, then\n",
-        "call :func:`~matplotlib.pyplot.draw` whenever you want to\n",
-        "refresh the plot.\n",
-        "\n",
-        "Use non-interactive mode in scripts in which you want to\n",
-        "generate one or more figures and display them before ending\n",
-        "or generating a new set of figures.  In that case, use\n",
-        ":func:`~matplotlib.pyplot.show` to display the figure(s) and\n",
-        "to block execution until you have manually destroyed them.\n",
-        "\n",
-        "\n",
-        "## Performance\n",
-        "\n",
-        "Whether exploring data in interactive mode or programmatically\n",
-        "saving lots of plots, rendering performance can be a painful\n",
-        "bottleneck in your pipeline. Matplotlib provides a couple\n",
-        "ways to greatly reduce rendering time at the cost of a slight\n",
-        "change (to a settable tolerance) in your plot's appearance.\n",
-        "The methods available to reduce rendering time depend on the\n",
-        "type of plot that is being created.\n",
-        "\n",
-        "### Line segment simplification\n",
-        "\n",
-        "For plots that have line segments (e.g. typical line plots, outlines\n",
-        "of polygons, etc.), rendering performance can be controlled by\n",
-        ":rc:`path.simplify` and :rc:`path.simplify_threshold`, which\n",
-        "can be defined e.g. in the :file:`matplotlibrc` file (see\n",
-        ":doc:`/tutorials/introductory/customizing` for more information about\n",
-        "the :file:`matplotlibrc` file). :rc:`path.simplify` is a boolean\n",
-        "indicating whether or not line segments are simplified at all.\n",
-        ":rc:`path.simplify_threshold` controls how much line segments are simplified;\n",
-        "higher thresholds result in quicker rendering.\n",
-        "\n",
-        "The following script will first display the data without any\n",
-        "simplification, and then display the same data with simplification.\n",
-        "Try interacting with both of them::\n",
-        "\n",
-        "  import numpy as np\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  import matplotlib as mpl\n",
-        "\n",
-        "  # Setup, and create the data to plot\n",
-        "  y = np.random.rand(100000)\n",
-        "  y[50000:] *= 2\n",
-        "  y[np.geomspace(10, 50000, 400).astype(int)] = -1\n",
-        "  mpl.rcParams['path.simplify'] = True\n",
-        "\n",
-        "  mpl.rcParams['path.simplify_threshold'] = 0.0\n",
-        "  plt.plot(y)\n",
-        "  plt.show()\n",
-        "\n",
-        "  mpl.rcParams['path.simplify_threshold'] = 1.0\n",
-        "  plt.plot(y)\n",
-        "  plt.show()\n",
-        "\n",
-        "Matplotlib currently defaults to a conservative simplification\n",
-        "threshold of ``1/9``. If you want to change your default settings\n",
-        "to use a different value, you can change your :file:`matplotlibrc`\n",
-        "file.  Alternatively, you could create a new style for\n",
-        "interactive plotting (with maximal simplification) and another\n",
-        "style for publication quality plotting (with minimal\n",
-        "simplification) and activate them as necessary. See\n",
-        ":doc:`/tutorials/introductory/customizing` for\n",
-        "instructions on how to perform these actions.\n",
-        "\n",
-        "The simplification works by iteratively merging line segments\n",
-        "into a single vector until the next line segment's perpendicular\n",
-        "distance to the vector (measured in display-coordinate space)\n",
-        "is greater than the ``path.simplify_threshold`` parameter.\n",
-        "\n",
-        "<div class=\"alert alert-info\"><h4>Note</h4><p>Changes related to how line segments are simplified were made\n",
-        "  in version 2.1. Rendering time will still be improved by these\n",
-        "  parameters prior to 2.1, but rendering time for some kinds of\n",
-        "  data will be vastly improved in versions 2.1 and greater.</p></div>\n",
-        "\n",
-        "### Marker simplification\n",
-        "\n",
-        "Markers can also be simplified, albeit less robustly than\n",
-        "line segments. Marker simplification is only available\n",
-        "to :class:`~matplotlib.lines.Line2D` objects (through the\n",
-        "``markevery`` property). Wherever\n",
-        ":class:`~matplotlib.lines.Line2D` construction parameters\n",
-        "are passed through, such as\n",
-        ":func:`matplotlib.pyplot.plot` and\n",
-        ":meth:`matplotlib.axes.Axes.plot`, the ``markevery``\n",
-        "parameter can be used::\n",
-        "\n",
-        "  plt.plot(x, y, markevery=10)\n",
-        "\n",
-        "The markevery argument allows for naive subsampling, or an\n",
-        "attempt at evenly spaced (along the *x* axis) sampling. See the\n",
-        ":doc:`/gallery/lines_bars_and_markers/markevery_demo`\n",
-        "for more information.\n",
-        "\n",
-        "### Splitting lines into smaller chunks\n",
-        "\n",
-        "If you are using the Agg backend (see `what-is-a-backend`),\n",
-        "then you can make use of :rc:`agg.path.chunksize`\n",
-        "This allows you to specify a chunk size, and any lines with\n",
-        "greater than that many vertices will be split into multiple\n",
-        "lines, each of which has no more than ``agg.path.chunksize``\n",
-        "many vertices. (Unless ``agg.path.chunksize`` is zero, in\n",
-        "which case there is no chunking.) For some kind of data,\n",
-        "chunking the line up into reasonable sizes can greatly\n",
-        "decrease rendering time.\n",
-        "\n",
-        "The following script will first display the data without any\n",
-        "chunk size restriction, and then display the same data with\n",
-        "a chunk size of 10,000. The difference can best be seen when\n",
-        "the figures are large, try maximizing the GUI and then\n",
-        "interacting with them::\n",
-        "\n",
-        "  import numpy as np\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  import matplotlib as mpl\n",
-        "  mpl.rcParams['path.simplify_threshold'] = 1.0\n",
-        "\n",
-        "  # Setup, and create the data to plot\n",
-        "  y = np.random.rand(100000)\n",
-        "  y[50000:] *= 2\n",
-        "  y[np.geomspace(10, 50000, 400).astype(int)] = -1\n",
-        "  mpl.rcParams['path.simplify'] = True\n",
-        "\n",
-        "  mpl.rcParams['agg.path.chunksize'] = 0\n",
-        "  plt.plot(y)\n",
-        "  plt.show()\n",
-        "\n",
-        "  mpl.rcParams['agg.path.chunksize'] = 10000\n",
-        "  plt.plot(y)\n",
-        "  plt.show()\n",
-        "\n",
-        "### Legends\n",
-        "\n",
-        "The default legend behavior for axes attempts to find the location\n",
-        "that covers the fewest data points (``loc='best'``). This can be a\n",
-        "very expensive computation if there are lots of data points. In\n",
-        "this case, you may want to provide a specific location.\n",
-        "\n",
-        "### Using the *fast* style\n",
-        "\n",
-        "The *fast* style can be used to automatically set\n",
-        "simplification and chunking parameters to reasonable\n",
-        "settings to speed up plotting large amounts of data.\n",
-        "It can be used simply by running::\n",
-        "\n",
-        "  import matplotlib.style as mplstyle\n",
-        "  mplstyle.use('fast')\n",
-        "\n",
-        "It is very light weight, so it plays nicely with other\n",
-        "styles, just make sure the fast style is applied last\n",
-        "so that other styles do not overwrite the settings::\n",
-        "\n",
-        "  mplstyle.use(['dark_background', 'ggplot', 'fast'])\n",
-        "\n"
+        "Generating visualizations with pyplot is very quick:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EFw7hX_9xR4I"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kcMh0XPiGtrD"
+      },
+      "source": [
+        "# いまここ"
       ]
     }
   ]
