--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlibtutorials.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPEqF6Kkdoz1x+ybb2ROuoY",
+      "authorship_tag": "ABX9TyPYIqHsPe7pEClWGWDpV9Pu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -874,6 +874,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PbAFMpxJ0ArJ"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -912,6 +921,10 @@
         "id": "93eKG1U1ztml"
       },
       "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "You may be wondering why the x-axis ranges from 0-3 and the y-axis\n",
         "from 1-4.  If you provide a single list or array to\n",
         "`~.pyplot.plot`, matplotlib assumes it is a\n",
@@ -923,6 +936,166 @@
         "`~.pyplot.plot` is a versatile function, and will take an arbitrary number of\n",
         "arguments.  For example, to plot x versus y, you can write:"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BtoKo7vsz7qM"
+      },
+      "source": [
+        "plt.plot([1, 2, 3, 4], [1, 4, 9, 16])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "csgCecNZz99e"
+      },
+      "source": [
+        "See the ~.pyplot.plot documentation for a complete list of line styles and format strings. The ~.pyplot.axis function in the example above takes a list of [xmin, xmax, ymin, ymax] and specifies the viewport of the axes.\n",
+        "\n",
+        "If matplotlib were limited to working with lists, it would be fairly useless for numeric processing. Generally, you will use numpy <http://www.numpy.org>_ arrays. In fact, all sequences are converted to numpy arrays internally. The example below illustrates plotting several lines with different format styles in one function call using arrays."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zf3XetnF0GRL"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# evenly sampled time at 200ms intervals\n",
+        "t = np.arange(0., 5., 0.2)\n",
+        "\n",
+        "# red dashes, blue squares and green triangles\n",
+        "plt.plot(t, t, 'r--', t, t**2, 'bs', t, t**3, 'g^')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hRVnWx3x0Ift"
+      },
+      "source": [
+        "\n",
+        "## Plotting with keyword strings\n",
+        "\n",
+        "There are some instances where you have data in a format that lets you\n",
+        "access particular variables with strings. For example, with\n",
+        "`numpy.recarray` or `pandas.DataFrame`.\n",
+        "\n",
+        "Matplotlib allows you provide such an object with\n",
+        "the ``data`` keyword argument. If provided, then you may generate plots with\n",
+        "the strings corresponding to these variables."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2otgUBPM0LYM"
+      },
+      "source": [
+        "data = {'a': np.arange(50),\n",
+        "        'c': np.random.randint(0, 50, 50),\n",
+        "        'd': np.random.randn(50)}\n",
+        "data['b'] = data['a'] + 10 * np.random.randn(50)\n",
+        "data['d'] = np.abs(data['d']) * 100\n",
+        "\n",
+        "plt.scatter('a', 'b', c='c', s='d', data=data)\n",
+        "plt.xlabel('entry a')\n",
+        "plt.ylabel('entry b')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GtxP7PRF0PpP"
+      },
+      "source": [
+        "\n",
+        "## Plotting with categorical variables\n",
+        "\n",
+        "It is also possible to create a plot using categorical variables.\n",
+        "Matplotlib allows you to pass categorical variables directly to\n",
+        "many plotting functions. For example:"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AvXyfd4d0R6S"
+      },
+      "source": [
+        "names = ['group_a', 'group_b', 'group_c']\n",
+        "values = [1, 10, 100]\n",
+        "\n",
+        "plt.figure(figsize=(9, 3))\n",
+        "\n",
+        "plt.subplot(131)\n",
+        "plt.bar(names, values)\n",
+        "plt.subplot(132)\n",
+        "plt.scatter(names, values)\n",
+        "plt.subplot(133)\n",
+        "plt.plot(names, values)\n",
+        "plt.suptitle('Categorical Plotting')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z3VURwUY0U9x"
+      },
+      "source": [
+        "Controlling line properties\n",
+        "Lines have many attributes that you can set: linewidth, dash style, antialiased, etc; see matplotlib.lines.Line2D. There are several ways to set line properties\n",
+        "\n",
+        "Use keyword args::\n",
+        "\n",
+        "plt.plot(x, y, linewidth=2.0)\n",
+        "Use the setter methods of a Line2D instance. plot returns a list of Line2D objects; e.g., line1, line2 = plot(x1, y1, x2, y2). In the code below we will suppose that we have only one line so that the list returned is of length 1. We use tuple unpacking with line, to get the first element of that list::\n",
+        "\n",
+        "line, = plt.plot(x, y, '-')\n",
+        "line.set_antialiased(False) # turn off antialiasing\n",
+        "Use ~.pyplot.setp. The example below uses a MATLAB-style function to set multiple properties on a list of lines. setp works transparently with a list of objects or a single object. You can either use python keyword arguments or MATLAB-style string/value pairs::\n",
+        "\n",
+        "lines = plt.plot(x1, y1, x2, y2)\n",
+        "# use keyword args\n",
+        "plt.setp(lines, color='r', linewidth=2.0)\n",
+        "# or MATLAB style string value pairs\n",
+        "plt.setp(lines, 'color', 'r', 'linewidth', 2.0)\n",
+        "Here are the available ~.lines.Line2D properties."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aJpZno900d3t"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
