--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlibtutorials.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPYIqHsPe7pEClWGWDpV9Pu",
+      "authorship_tag": "ABX9TyNbJPGq4qRyoW8JmSCGHqqS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1092,7 +1092,375 @@
         "id": "aJpZno900d3t"
       },
       "source": [
-        ""
+        "====================== ================================================== Property Value Type ====================== ================================================== alpha float animated True | False antialiased or aa True | False clip_box a matplotlib.transform.Bbox instance clip_on True | False clip_path a Path instance and a Transform instance, a Patch color or c any matplotlib color contains the hit testing function dash_capstyle 'butt' | 'round' | 'projecting' dash_joinstyle 'miter' | 'round' | 'bevel' dashes sequence of on/off ink in points data (np.array xdata, np.array ydata) figure a matplotlib.figure.Figure instance label any string linestyle or ls '-' | '--' | '-.' | ':' | 'steps' | ... linewidth or lw float value in points marker '+' | ',' | '.' | '1' | '2' | '3' | '4' markeredgecolor or mec any matplotlib color markeredgewidth or mew float value in points markerfacecolor or mfc any matplotlib color markersize or ms float markevery None | integer | (startind, stride) picker used in interactive line selection pickradius the line pick selection radius solid_capstyle 'butt' | 'round' | 'projecting' solid_joinstyle 'miter' | 'round' | 'bevel' transform a matplotlib.transforms.Transform instance visible True | False xdata np.array ydata np.array zorder any number ====================== =================================================="
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1yGO51rE0uR7"
+      },
+      "source": [
+        "To get a list of settable line properties, call the ~.pyplot.setp function with a line or lines as argument"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0L2IKzzs0wl6"
+      },
+      "source": [
+        ".. sourcecode:: ipython\n",
+        "\n",
+        "In [69]: lines = plt.plot([1, 2, 3])\n",
+        "\n",
+        "In [70]: plt.setp(lines)\n",
+        "  alpha: float\n",
+        "  animated: [True | False]\n",
+        "  antialiased or aa: [True | False]\n",
+        "  ...snip"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2PQni07r0zZq"
+      },
+      "source": [
+        "Working with multiple figures and axes"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dXXEZWIg03IQ"
+      },
+      "source": [
+        "MATLAB, and :mod:.pyplot, have the concept of the current figure and the current axes. All plotting functions apply to the current axes. The function ~.pyplot.gca returns the current axes (a matplotlib.axes.Axes instance), and ~.pyplot.gcf returns the current figure (a matplotlib.figure.Figure instance). Normally, you don't have to worry about this, because it is all taken care of behind the scenes. Below is a script to create two subplots."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q-cMFKQv09So"
+      },
+      "source": [
+        "def f(t):\n",
+        "    return np.exp(-t) * np.cos(2*np.pi*t)\n",
+        "\n",
+        "t1 = np.arange(0.0, 5.0, 0.1)\n",
+        "t2 = np.arange(0.0, 5.0, 0.02)\n",
+        "\n",
+        "plt.figure()\n",
+        "plt.subplot(211)\n",
+        "plt.plot(t1, f(t1), 'bo', t2, f(t2), 'k')\n",
+        "\n",
+        "plt.subplot(212)\n",
+        "plt.plot(t2, np.cos(2*np.pi*t2), 'r--')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sg0SzWAN0_YV"
+      },
+      "source": [
+        "The ~.pyplot.figure call here is optional because figure(1) will be created by default, just as a subplot(111) will be created by default if you don't manually specify any axes. The ~.pyplot.subplot call specifies numrows, numcols, plot_number where plot_number ranges from 1 to numrows*numcols. The commas in the subplot call are optional if numrows*numcols<10. So subplot(211) is identical to subplot(2, 1, 1).\n",
+        "\n",
+        "You can create an arbitrary number of subplots and axes. If you want to place an axes manually, i.e., not on a rectangular grid, use ~.pyplot.axes, which allows you to specify the location as axes([left, bottom, width, height]) where all values are in fractional (0 to 1) coordinates. See :doc:/gallery/subplots_axes_and_figures/axes_demo for an example of placing axes manually and :doc:/gallery/subplots_axes_and_figures/subplot_demo for an example with lots of subplots.\n",
+        "\n",
+        "You can create multiple figures by using multiple ~.pyplot.figure calls with an increasing figure number. Of course, each figure can contain as many axes and subplots as your heart desires::"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mkskHyxZ1Cy0"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "plt.figure(1)                # the first figure\n",
+        "plt.subplot(211)             # the first subplot in the first figure\n",
+        "plt.plot([1, 2, 3])\n",
+        "plt.subplot(212)             # the second subplot in the first figure\n",
+        "plt.plot([4, 5, 6])\n",
+        "\n",
+        "\n",
+        "plt.figure(2)                # a second figure\n",
+        "plt.plot([4, 5, 6])          # creates a subplot(111) by default\n",
+        "\n",
+        "plt.figure(1)                # figure 1 current; subplot(212) still current\n",
+        "plt.subplot(211)             # make subplot(211) in figure1 current\n",
+        "plt.title('Easy as 1, 2, 3') # subplot 211 title"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a-w1rXuE1JDT"
+      },
+      "source": [
+        "You can clear the current figure with ~.pyplot.clf and the current axes with ~.pyplot.cla. If you find it annoying that states (specifically the current image, figure and axes) are being maintained for you behind the scenes, don't despair: this is just a thin stateful wrapper around an object oriented API, which you can use instead (see :doc:/tutorials/intermediate/artists)\n",
+        "\n",
+        "If you are making lots of figures, you need to be aware of one more thing: the memory required for a figure is not completely released until the figure is explicitly closed with ~.pyplot.close. Deleting all references to the figure, and/or using the window manager to kill the window in which the figure appears on the screen, is not enough, because pyplot maintains internal references until ~.pyplot.close is called."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "INk80H2S1NAF"
+      },
+      "source": [
+        "Working with text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CPeouqyJ1S2o"
+      },
+      "source": [
+        "~.pyplot.text can be used to add text in an arbitrary location, and ~.pyplot.xlabel, ~.pyplot.ylabel and ~.pyplot.title are used to add text in the indicated locations (see :doc:/tutorials/text/text_intro for a more detailed example)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_xOznIU11Uuz"
+      },
+      "source": [
+        "mu, sigma = 100, 15\n",
+        "x = mu + sigma * np.random.randn(10000)\n",
+        "\n",
+        "# the histogram of the data\n",
+        "n, bins, patches = plt.hist(x, 50, density=1, facecolor='g', alpha=0.75)\n",
+        "\n",
+        "\n",
+        "plt.xlabel('Smarts')\n",
+        "plt.ylabel('Probability')\n",
+        "plt.title('Histogram of IQ')\n",
+        "plt.text(60, .025, r'$\\mu=100,\\ \\sigma=15$')\n",
+        "plt.axis([40, 160, 0, 0.03])\n",
+        "plt.grid(True)\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8dcHkhtf1Wjs"
+      },
+      "source": [
+        "All of the ~.pyplot.text functions return a matplotlib.text.Text instance. Just as with with lines above, you can customize the properties by passing keyword arguments into the text functions or using ~.pyplot.setp::\n",
+        "\n",
+        "t = plt.xlabel('my data', fontsize=14, color='red')\n",
+        "\n",
+        "These properties are covered in more detail in :doc:/tutorials/text/text_props."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p4ZIwJbI1Y66"
+      },
+      "source": [
+        "Using mathematical expressions in text"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "39ch7GZp1bqK"
+      },
+      "source": [
+        "Using mathematical expressions in text\n",
+        "matplotlib accepts TeX equation expressions in any text expression. For example to write the expression  \n",
+        "σ\n",
+        "i\n",
+        "=\n",
+        "15\n",
+        "  in the title, you can write a TeX expression surrounded by dollar signs::\n",
+        "\n",
+        "plt.title(r'$\\sigma_i=15$')\n",
+        "The r preceding the title string is important -- it signifies that the string is a raw string and not to treat backslashes as python escapes. matplotlib has a built-in TeX expression parser and layout engine, and ships its own math fonts -- for details see :doc:/tutorials/text/mathtext. Thus you can use mathematical text across platforms without requiring a TeX installation. For those who have LaTeX and dvipng installed, you can also use LaTeX to format your text and incorporate the output directly into your display figures or saved postscript -- see :doc:/tutorials/text/usetex.\n",
+        "\n",
+        "Annotating text"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jTvlNGb51eU4"
+      },
+      "source": [
+        "Annotating text\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "smZWVLpp1mz8"
+      },
+      "source": [
+        "\n",
+        "The uses of the basic ~.pyplot.text function above place text at an arbitrary position on the Axes. A common use for text is to annotate some feature of the plot, and the ~.pyplot.annotate method provides helper functionality to make annotations easy. In an annotation, there are two points to consider: the location being annotated represented by the argument xy and the location of the text xytext. Both of these arguments are (x, y) tuples."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YiwiHmh31gKF"
+      },
+      "source": [
+        "ax = plt.subplot(111)\n",
+        "\n",
+        "t = np.arange(0.0, 5.0, 0.01)\n",
+        "s = np.cos(2*np.pi*t)\n",
+        "line, = plt.plot(t, s, lw=2)\n",
+        "\n",
+        "plt.annotate('local max', xy=(2, 1), xytext=(3, 1.5),\n",
+        "             arrowprops=dict(facecolor='black', shrink=0.05),\n",
+        "             )\n",
+        "\n",
+        "plt.ylim(-2, 2)\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s6FB6X-e1q7m"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "In this basic example, both the xy (arrow tip) and xytext locations (text location) are in data coordinates. There are a variety of other coordinate systems one can choose -- see annotations-tutorial and plotting-guide-annotation for details. More examples can be found in :doc:/gallery/text_labels_and_annotations/annotation_demo."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ppWGpGM81tFa"
+      },
+      "source": [
+        "Logarithmic and other nonlinear axes"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mKjl1PaF1vMM"
+      },
+      "source": [
+        ":mod:matplotlib.pyplot supports not only linear axis scales, but also logarithmic and logit scales. This is commonly used if data spans many orders of magnitude. Changing the scale of an axis is easy:\n",
+        "\n",
+        "plt.xscale('log')\n",
+        "An example of four plots with the same data and different scales for the y axis is shown below."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YY9hKWUV1xj1"
+      },
+      "source": [
+        "# Fixing random state for reproducibility\n",
+        "np.random.seed(19680801)\n",
+        "\n",
+        "# make up some data in the open interval (0, 1)\n",
+        "y = np.random.normal(loc=0.5, scale=0.4, size=1000)\n",
+        "y = y[(y > 0) & (y < 1)]\n",
+        "y.sort()\n",
+        "x = np.arange(len(y))\n",
+        "\n",
+        "# plot with various axes scales\n",
+        "plt.figure()\n",
+        "\n",
+        "# linear\n",
+        "plt.subplot(221)\n",
+        "plt.plot(x, y)\n",
+        "plt.yscale('linear')\n",
+        "plt.title('linear')\n",
+        "plt.grid(True)\n",
+        "\n",
+        "# log\n",
+        "plt.subplot(222)\n",
+        "plt.plot(x, y)\n",
+        "plt.yscale('log')\n",
+        "plt.title('log')\n",
+        "plt.grid(True)\n",
+        "\n",
+        "# symmetric log\n",
+        "plt.subplot(223)\n",
+        "plt.plot(x, y - y.mean())\n",
+        "plt.yscale('symlog', linthresh=0.01)\n",
+        "plt.title('symlog')\n",
+        "plt.grid(True)\n",
+        "\n",
+        "# logit\n",
+        "plt.subplot(224)\n",
+        "plt.plot(x, y)\n",
+        "plt.yscale('logit')\n",
+        "plt.title('logit')\n",
+        "plt.grid(True)\n",
+        "# Adjust the subplot layout, because the logit one may take more space\n",
+        "# than usual, due to y-tick labels like \"1 - 10^{-3}\"\n",
+        "plt.subplots_adjust(top=0.92, bottom=0.08, left=0.10, right=0.95, hspace=0.25,\n",
+        "                    wspace=0.35)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uTmAwOJR11Rv"
+      },
+      "source": [
+        "It is also possible to add your own scale, see adding-new-scales for details."
       ],
       "execution_count": null,
       "outputs": []
