Colaboratory を使用して作成しました

--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlibtutorials.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOl3l6L1DRiv4GfBZtiDIhI",
+      "authorship_tag": "ABX9TyM3ekSoUehWFAB7HA3KPgEz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2397,15 +2397,27 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "bXSlHXSC-Lvd"
+        "id": "DDG95IVr-1-M"
       },
       "source": [
-        "である。%matplotlib inline"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "# グラフ描画のライフサイクル"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Asdu7AI__AJh"
+      },
+      "source": [
+        "次にグラフを描いて、加工して、保存する手順の中で、参考になるベストプラスティスを示したい。\n",
+        "\n",
+        "この章は  \n",
+        " <http://pbpython.com/effective-matplotlib.html>`_\n",
+        "    by Chris Moffitt  \n",
+        "をベースに作成された。\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2414,14 +2426,6 @@
       },
       "source": [
         "\n",
-        "# The Lifecycle of a Plot\n",
-        "\n",
-        "This tutorial aims to show the beginning, middle, and end of a single\n",
-        "visualization using Matplotlib. We'll begin with some raw data and\n",
-        "end by saving a figure of a customized visualization. Along the way we try\n",
-        "to highlight some neat features and best-practices using Matplotlib.\n",
-        "\n",
-        ".. currentmodule:: matplotlib\n",
         "\n",
         "<div class=\"alert alert-info\"><h4>Note</h4><p>This tutorial is based on\n",
         "    `this excellent blog post <http://pbpython.com/effective-matplotlib.html>`_\n",
