--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlibtutorials.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3ekSoUehWFAB7HA3KPgEz",
+      "authorship_tag": "ABX9TyNT7jSpHxrm9Q7wZlKMWC6W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2390,15 +2390,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PbAFMpxJ0ArJ"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "DDG95IVr-1-M"
       },
       "source": [
@@ -2416,7 +2407,7 @@
         "この章は  \n",
         " <http://pbpython.com/effective-matplotlib.html>`_\n",
         "    by Chris Moffitt  \n",
-        "をベースに作成された。\n"
+        "をベースに作成した。\n"
       ]
     },
     {
@@ -2425,35 +2416,6 @@
         "id": "YP6Ruldv-Lvl"
       },
       "source": [
-        "\n",
-        "\n",
-        "<div class=\"alert alert-info\"><h4>Note</h4><p>This tutorial is based on\n",
-        "    `this excellent blog post <http://pbpython.com/effective-matplotlib.html>`_\n",
-        "    by Chris Moffitt. It was transformed into this tutorial by Chris Holdgraf.</p></div>\n",
-        "\n",
-        "## A note on the Object-Oriented API vs. Pyplot\n",
-        "\n",
-        "Matplotlib has two interfaces. The first is an object-oriented (OO)\n",
-        "interface. In this case, we utilize an instance of :class:`axes.Axes`\n",
-        "in order to render visualizations on an instance of :class:`figure.Figure`.\n",
-        "\n",
-        "The second is based on MATLAB and uses a state-based interface. This is\n",
-        "encapsulated in the :mod:`.pyplot` module. See the :doc:`pyplot tutorials\n",
-        "</tutorials/introductory/pyplot>` for a more in-depth look at the pyplot\n",
-        "interface.\n",
-        "\n",
-        "Most of the terms are straightforward but the main thing to remember\n",
-        "is that:\n",
-        "\n",
-        "* The Figure is the final image that may contain 1 or more Axes.\n",
-        "* The Axes represent an individual plot (don't confuse this with the word\n",
-        "  \"axis\", which refers to the x/y axis of a plot).\n",
-        "\n",
-        "We call methods that do the plotting directly from the Axes, which gives\n",
-        "us much more flexibility and power in customizing our plot.\n",
-        "\n",
-        "<div class=\"alert alert-info\"><h4>Note</h4><p>In general, try to use the object-oriented interface over the pyplot\n",
-        "   interface.</p></div>\n",
         "\n",
         "## Our data\n",
         "\n",
@@ -2467,9 +2429,11 @@
         "id": "g5Oxf27Y-Lvm"
       },
       "source": [
+        "# 以下のサンプルで使われるデータは元のサイトで使われていたもの\n",
+        "# 会社名をキーにした売上金額の辞書の形式になっている\n",
+        "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "\n",
         "\n",
         "data = {'Barton LLC': 109438.50,\n",
         "        'Frami, Hills and Schmidt': 103569.59,\n",
@@ -2485,8 +2449,40 @@
         "group_names = list(data.keys())\n",
         "group_mean = np.mean(group_data)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YGGRQvvTD5y5",
+        "outputId": "8c454299-fb02-4d9f-d4d3-d65ac980a550",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(type(data))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'dict'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PbAFMpxJ0ArJ"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
