Colaboratory を使用して作成しました

--- a/chartmath201complex.ipynb
+++ b/chartmath201complex.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath201complex.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP8F5sBmPh0lHMKcOg/vWH3",
+      "authorship_tag": "ABX9TyO9wqY7nEi1sV+gHSXNP1g5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
       "source": [
         "# メモ\n",
         "\n",
-        "数学を Colab で学ぶ、というチャレンジ。\n",
+        "数学を Colab で学ぶ。\n",
         "\n",
         "\n",
         "\n"
@@ -171,6 +171,18 @@
         "### 1.2.5 2次方程式の解の判別\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JffoMIJHASAq"
+      },
+      "source": [
+        "＃ 例題\n",
+        "form sympy import *\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
