--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOyx/34mJWLPnbwQW2307VQ",
+      "authorship_tag": "ABX9TyPhKcqFU1KxVbvB9/zA7zmP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2490,15 +2490,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sjzVyq0av32B"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "zTYLayT3qEzA"
       },
       "source": [
@@ -2518,8 +2509,11 @@
         "![ヘッダーとブロック](https://github.com/chainer/tutorials/blob/master/ja/images/02/02_05.png?raw=1)\n",
         "\n",
         "メモ: \n",
-        "制御構文は\n",
-        "The three basic types of control structures are sequential, selection and iteration. "
+        "制御構文はまず上から下へ流れるシーケンシャルがある。 その流れを変えるのが条件分岐 (selection) 。 それとシーケンシャルでなく繰返しによる制御 (for, while, iterator) が別途ある、と言う風に普通考える。\n",
+        "\n",
+        "関数型プログラミングの場合、if は関数なので条件分岐には使わない。 for, while, iterator も関数なので、若干使い方が違う。 基本的には for, while は使わないか意味合いが変わる。\n",
+        "\n",
+        "で、python の場合条件分岐も繰り返し制御もほぼ関数型に近い使い方をする例が多い。 明示的ではなくプログラミングセンスとして、学ばれているのかもしれない。 refactoring とか pattern とか。"
       ]
     },
     {
@@ -2538,7 +2532,7 @@
         "id": "oELnTpERNwCQ"
       },
       "source": [
-        "### 繰り返し（for 文）\n",
+        "**繰り返し（for 文）**\n",
         "\n",
         "同じ内容のメールを宛名だけ個別に変えて、1000 人に一斉送信したい場合など、繰り返す処理を記述する制御構文である `for` を使う。\n",
         "\n",
@@ -2848,16 +2842,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iWEhrw_9v9dS"
-      },
-      "source": [
-        "最初のケースと比べていかがでしょうか。\n",
-        "動作としては変わりがないが、可読性と言う観点も重要である。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "eeTHJ3hzPW7U"
       },
       "source": [
@@ -2890,6 +2874,39 @@
             "0番目: 佐藤さん\n",
             "1番目: 鈴木さん\n",
             "2番目: 高橋さん\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iWEhrw_9v9dS"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E2uESzXk7fUf",
+        "outputId": "7d11ec28-5c1a-4987-ffad-d5ab698eba22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "print(list(enumerate(names)))"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(0, '佐藤'), (1, '鈴木'), (2, '高橋')]\n"
           ],
           "name": "stdout"
         }
@@ -4531,7 +4548,7 @@
         "`'Chain'` と言うオブジェクトは、`'a'` と言う名前の属性を持っていない、と言われている。\n",
         "`a` と言う属性は、`Chain` の親クラスである `Link` の `__init__()`  メソッドで定義されている。\n",
         "そのため、`Chain` クラスをインスタンス化する際に、親クラスである `Link` の `__init__()`  メソッドが呼ばれているのであれば、このエラーは起こらないはずである。\n",
-        "なぜエラーとなってしまったのでしょうか。\n",
+        "なぜエラーとなってしまったのだろうか。\n",
         "\n",
         "それは、`Chain` クラスにも `__init__()` メソッドを定義したため、親クラスである `Link` の `__init__()`  メソッドが上書きされてしまい、実行されなかったためである。\n",
         "しかし、親クラスの `__init__()`  メソッドを明示的に呼ぶことで、これは解決できる。\n",
