Colaboratory を使用して作成しました

--- a/chartmath302limit.ipynb
+++ b/chartmath302limit.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath302limit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMqB8H8oAWeilnlOBXONMXn",
+      "authorship_tag": "ABX9TyMH84J0POQ2+cFJcjJGwa9H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,15 +111,66 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d2YDQhux2m9F"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d2YDQhux2m9F",
+        "outputId": "9bba5a4b-a10b-46fe-858b-519cd586e461"
       },
       "source": [
         "# 基本例題 14 p.30\n",
-        "\n",
-        "\n"
+        "import numpy as np\n",
+        "from fractions import Fraction\n",
+        "[ Fraction (1)/(n+1)**2 for n in range(5)]\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Fraction(1, 1),\n",
+              " Fraction(1, 4),\n",
+              " Fraction(1, 9),\n",
+              " Fraction(1, 16),\n",
+              " Fraction(1, 25)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CEoxZcBp7-eE",
+        "outputId": "2aece77d-835e-49c9-d526-c6cd207ed429",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "from sympy import *\n",
+        "display([1/Rational(n+1)**2 for n in range(5)])"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1, 1/4, 1/9, 1/16, 1/25]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
