Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "chainer.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMQ2+pUh97umnAEizqLrdlw",
+      "authorship_tag": "ABX9TyMm8Tn8Vdhn5U3cMxm2NeSt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2145,7 +2144,7 @@
         "\n",
         "定期テストの結果をまとめることを考えてみよう。\n",
         "\n",
-        "例えば、数学 90 点、理科 75 点、英語 80 点だったと言う結果を `scores = [90, 75, 80]` とリストで表して見る。\n",
+        "例えば、数学 90 点、理科 75 点、英語 80 点だったと言う結果を `scores = [90, 75, 80]` とリストで表してみる。\n",
         "しかし、これでは**何番目がどの教科の点数に対応するか**、一見して分かりにくい。\n",
         "\n",
         "Python の `dict` 型は、**キー (key)** とそれに対応する**値 (value)** をセットにして格納することができる型であり、このようなときに便利である。\n",
@@ -2506,7 +2505,12 @@
         "Python の制御構文は、**ヘッダ (header)** と **ブロック (block)** と呼ばれる 2 つの部分で構成されている。\n",
         "これらを合わせて **複合文 (compound statement)** と呼ぶ。\n",
         "\n",
-        "![ヘッダーとブロック](https://github.com/chainer/tutorials/blob/master/ja/images/02/02_05.png?raw=1)\n",
+        "\n",
+        "```\n",
+        "if 条件: # コロンが必要。 ヘッダー\n",
+        "    処理ブロック # インデントが必要。半角スペース4つ\n",
+        "```\n",
+        "\n",
         "\n",
         "メモ: \n",
         "制御構文はまず上から下へ流れるシーケンシャルがある。 その流れを変えるのが条件分岐 (selection) 。 それとシーケンシャルでなく繰返しによる制御 (for, while, iterator) が別途ある、と言う風に普通考える。\n",
@@ -2933,9 +2937,10 @@
         "for name, version, suffix in zip(names, versions, suffixes):\n",
         "    print('{} {} {}'.format(name, version, suffix))\n",
         "\n",
+        "#実験\n",
         "print(list(zip(names, versions, suffixes)))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2960,23 +2965,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "26k4lHCTktwk"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "WguFiYgqQnQT"
       },
       "source": [
-        "### 条件分岐（if 文）\n",
+        "**条件分岐（if 文）**\n",
         "\n",
         "`if` は、指定した条件が `True` か `False` かによって、処理を変えるための制御構文である。\n",
+        "```\n",
+        "if 条件: # 条件が True であればブロック処理を実行。ヘッダー\n",
+        "    処理ブロック\n",
+        "elif 条件: # if の条件が False で追加の条件分岐(任意)。ヘッダー\n",
+        "    処理ブロック\n",
+        "else: # すべてが False の場合の条件分岐(任意)。ヘッダー\n",
+        "    処理ブロック\n",
+        "```\n",
         "\n",
-        "![if文](https://github.com/chainer/tutorials/blob/master/ja/images/02/02_08.png?raw=1)"
+        "python の if は文であって、式ではない。"
       ]
     },
     {
@@ -2987,7 +2991,7 @@
       "source": [
         "`elif` と `else` は任意であり、`elif` は 1 つだけでなく複数連ねることができる。\n",
         "\n",
-        "例えば、0 より大きいことを条件とした処理を書いて見る。"
+        "例えば、0 より大きいことを条件とした処理を書いてみる。"
       ]
     },
     {
@@ -2995,10 +2999,9 @@
       "metadata": {
         "id": "E-x_6gXwSsm7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "86d289f1-92f1-4ada-ff3e-017e71f7c4b4"
+        "outputId": "ee0eb8d0-de93-42ce-9940-959a40d4d9ff"
       },
       "source": [
         "# if の条件を満たす場合\n",
@@ -3009,12 +3012,12 @@
         "else:\n",
         "    print('0以下')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0より大きいです\n"
+            "0より大きい\n"
           ],
           "name": "stdout"
         }
@@ -3025,10 +3028,9 @@
       "metadata": {
         "id": "BmcHf-w5v9dV",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "134ddbe4-5605-4286-945e-a128ad6abc23"
+        "outputId": "958caf5a-abd9-448b-e7df-9785ae3ebd9f"
       },
       "source": [
         "# if の条件を満たさない場合\n",
@@ -3039,12 +3041,12 @@
         "else:\n",
         "    print('0以下')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0以下です\n"
+            "0以下\n"
           ],
           "name": "stdout"
         }
@@ -3064,10 +3066,9 @@
       "metadata": {
         "id": "6li0UyjpStjg",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8e0cecde-fce4-4db6-8d1c-0dbeb80e36b0"
+        "outputId": "e1f07fa1-f5b8-4a5d-d326-2027856443f1"
       },
       "source": [
         "a = 0\n",
@@ -3079,12 +3080,12 @@
         "else:\n",
         "    print('0より小さい')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "０です\n"
+            "０\n"
           ],
           "name": "stdout"
         }
@@ -3096,13 +3097,16 @@
         "id": "tZ15Hv9Gv9dY"
       },
       "source": [
-        "### 繰り返し（while 文）\n",
+        "**繰り返し（while 文）**\n",
         "\n",
         "繰り返し処理は、`for` 以外にも `while` を用いて記述することもできる。\n",
         "`while` 文では、以下のように**ループを継続する条件**を指定する。\n",
         "指定された条件文が `True` である限り、ブロックの部分に記述された処理が繰り返し実行される。\n",
         "\n",
-        "![while文](https://github.com/chainer/tutorials/blob/master/ja/images/02/02_09.png?raw=1)"
+        "```\n",
+        "while 条件: # True であればブロック処理を実行。ヘッダー\n",
+        "    ブロック処理\n",
+        "```\n"
       ]
     },
     {
@@ -3345,10 +3349,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "bGnwUu-pVEvm"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "e96zsBv7IfDn"
       },
       "source": [
-        "## 関数\n",
+        "**関数**\n",
         "\n",
         "何かひとまとまりの処理を書いた際には、その処理のためのコードをまとめて、プログラム全体の色々な箇所から再利用できるようにしておくと、便利な場合がある。\n",
         "ここでは、処理をひとまとめにする方法の一つとして**関数 (function)** を定義する方法を紹介する。"
@@ -3360,14 +3373,14 @@
         "id": "RCB98_8xv9df"
       },
       "source": [
-        "### 関数を定義する\n",
+        "**関数を定義する**\n",
         "\n",
         "![関数の定義](https://github.com/chainer/tutorials/blob/master/ja/images/02/02_10.png?raw=1)\n",
         "\n",
         "例えば、**受け取った値を 2 倍して表示する関数**を作ってみよう。\n",
         "\n",
         "関数を定義するには、まず名前を決める必要がある。\n",
-        "今回は `double()` と言う名前の関数を定義して見る。\n",
+        "今回は `double()` と言う名前の関数を定義してみる。\n",
         "\n",
         "関数も制御構文と同じく**ヘッダー**と**ブロック**を持っている。"
       ]
@@ -4071,7 +4084,7 @@
         "### クラスの定義\n",
         "\n",
         "それでは、家の設計図を表す `House` と言うクラスを定義してみる。\n",
-        "`House` クラスには、インスタンス化されたあとに、各インスタンス、すなわち誰か特定の人の家ごとに異なる値を持つ、`name_plate` と言う変数を持たせて見る。\n",
+        "`House` クラスには、インスタンス化されたあとに、各インスタンス、すなわち誰か特定の人の家ごとに異なる値を持つ、`name_plate` と言う変数を持たせてみる。\n",
         "\n",
         "`name_plate` と言う変数には、個別の家の表札に表示するための文字列が与えられるが、クラスを定義する際には「`name_plate` と言う変数を持つことができる」ようにしておくだけでよく、**実際にその変数に何か具体的な値を与える必要はない。**\n",
         "クラスは、**設計図**であればよく、具体的な値を持たせなくてもよいためである。\n",
@@ -4123,7 +4136,7 @@
         "ただし、呼び出す際には**そのインスタンスを引数に指定する必要はない。**\n",
         "以下に具体例を示し、再度このことを確認する。\n",
         "\n",
-        "それでは、上で定義した `House` クラスのインスタンスを作成して見る。\n",
+        "それでは、上で定義した `House` クラスのインスタンスを作成してみる。\n",
         "クラスのインスタンス化には、クラス名のあとに `()` を追加して、クラスを呼び出すような記法を使う。\n",
         "この際、関数を呼び出すときと同様にして、`()` に引数を渡すことができる。\n",
         "その引数は、`__init__()` メソッドに渡される。"
@@ -4154,7 +4167,7 @@
         "この自動的に渡される自身への参照は、呼び出しの際には明示的に指定しない。\n",
         "また、かならず 1 つ目の引数に自動的に渡されるため、呼び出し時に明示的に与えられた引数は 2 つ目以降の引数に渡されたものとして取り扱われる。\n",
         "\n",
-        "それでは次に、このクラスに `hello()` と言うメソッドを追加し、呼び出すと誰の家であるかを表示すると言う機能を実装して見る。"
+        "それでは次に、このクラスに `hello()` と言うメソッドを追加し、呼び出すと誰の家であるかを表示すると言う機能を実装してみる。"
       ]
     },
     {
@@ -4183,7 +4196,7 @@
         "id": "oTQagqYdv9dz"
       },
       "source": [
-        "それでは、2 つのインスタンスを作成して、それぞれから `hello()` メソッドを呼び出して見る。"
+        "それでは、2 つのインスタンスを作成して、それぞれから `hello()` メソッドを呼び出してみる。"
       ]
     },
     {
@@ -4268,7 +4281,7 @@
       },
       "source": [
         "この `Link` と言うクラスは、インスタンス化を行う際には 1 つも引数をとらないが、属性として `a` と `b` の 2 つの変数を保持し、それぞれには `__init__()` メソッドで 1 と 2 と言う値が代入される。\n",
-        "このクラスのインスタンスを作成して見る。"
+        "このクラスのインスタンスを作成してみる。"
       ]
     },
     {
@@ -4340,7 +4353,7 @@
         "`l` と言う `Link` クラスのインスタンスが持つ 2 つの属性を表示している。\n",
         "インスタンス化を行った際に `__init__()` メソッドの中で代入していた値が、表示されている。\n",
         "\n",
-        "次に、このクラスを**継承**する、`Chain` と言うクラスを定義して見る。\n",
+        "次に、このクラスを**継承**する、`Chain` と言うクラスを定義してみる。\n",
         "継承を行う場合は、クラス定義の際にクラス名に続けて `()` を書き、その中にベースにしたいクラスの名前を書く。\n",
         "`()` の中に書かれたクラスのことを、定義されるクラスの**親クラス**と言う。\n",
         "それに対し、`()` の中に書かれたクラスからみると、定義されるクラスは**子クラス**と呼ばれる。\n",
@@ -4441,7 +4454,7 @@
       },
       "source": [
         "`Chain` クラスの `sum()` メソッドでは、この親クラスの `__init__()`  メソッドで定義されている 2 つの属性を足し合わせて返している。\n",
-        "今作成したインスタンスから、この `sum()` メソッドを呼び出して見る。"
+        "今作成したインスタンスから、この `sum()` メソッドを呼び出してみる。"
       ]
     },
     {
@@ -4482,7 +4495,7 @@
       "source": [
         "このように、**親クラスを継承し、親クラスに無かった新しい機能が追加された、新しいクラスを定義することができる。**\n",
         "\n",
-        "それでは、この `Chain` と言うクラスにも `__init__()`  メソッドを定義して、新しい属性 `c` を定義し、`sum()` メソッドでは親クラスの `a`、`b` と言う属性とこの新たな `c` と言う属性の 3 つの和を返すように変更して見る。"
+        "それでは、この `Chain` と言うクラスにも `__init__()`  メソッドを定義して、新しい属性 `c` を定義し、`sum()` メソッドでは親クラスの `a`、`b` と言う属性とこの新たな `c` と言う属性の 3 つの和を返すように変更してみる。"
       ]
     },
     {
