--- a/deeplscratch03.ipynb
+++ b/deeplscratch03.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "deeplscratch03.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMXHpOX4FrpidttKFSpM5QX",
+      "authorship_tag": "ABX9TyOEiN23TMxdjTUBg/kIBoMV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,10 +36,12 @@
         "# メモ\n",
         "\n",
         "さいとうこうき斎藤康毅\n",
-        "零から作る Deep Learning 3\n",
+        "ゼロから作る Deep Learning 3\n",
         "フレームワーク編\n",
         "\n",
-        "を読む"
+        "を読む\n",
+        "\n",
+        "=> 中断。 なぜなら大変よく書けている本だと思うし、これを1つずつなぞっていけばChainer, PyTorch, TensorFlow が深く理解できるのかもしれないが、いまの自分の興味の対象ではない。 やるなら、1巻目 Python のところからでしょう そこなら Python の勉強にはなる。 それでもいまの興味の対象である sympy とかではない。"
       ]
     },
     {
@@ -62,7 +64,7 @@
         "\n",
         "# https://github.com/oreilly-japan/deep-learning-from-scratch-3\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +86,7 @@
         "    def __init__ (self, data):\n",
         "        self.data = data"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +104,7 @@
         "x = Variable(data)\n",
         "print(x.data)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +133,7 @@
         "print(type(x))\n",
         "print(type(data))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,16 +150,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Lz_aaac0kNqx",
-        "outputId": "0104337d-9685-4d64-948e-a3e93f95fad5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0104337d-9685-4d64-948e-a3e93f95fad5"
       },
       "source": [
         "x.data = np.array(2.0)\n",
         "print(x.data)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,10 +174,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "t7vp7ZnZkb3W",
-        "outputId": "8370cbb2-7321-4b7b-eb4a-d08525898ab1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8370cbb2-7321-4b7b-eb4a-d08525898ab1"
       },
       "source": [
         "import numpy as np\n",
@@ -189,7 +191,7 @@
         "x = np.array([[1, 2, 3], [4, 5, 6]])\n",
         "print(x.ndim)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
