Colaboratory を使用して作成しました

--- a/category_saigohayato.ipynb
+++ b/category_saigohayato.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "category_saigohayato.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqZ3wNInuS0cFR37JhCf8V",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNTS4pT4cHvHkIYImpuzWxa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +48,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "X3_Z0fgUAV6r"
+      },
+      "source": [
+        "# 圏とは、射とは"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "v6hS44XazziT"
       },
       "source": [
@@ -71,28 +81,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 138
-        },
-        "id": "eEEjRYyC1EEs",
-        "outputId": "ebd86e7b-46fe-4721-f106-dbb650839752"
+        "id": "eEEjRYyC1EEs"
       },
       "source": [
-        "射の合成 p.22"
-      ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-76feff994574>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    射の合成 p.22\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
+        "**射の合成 p.22**\n",
+        "\n",
+        "$ g \\circ f $\n"
       ]
     }
   ]
