Colaboratory を使用して作成しました

--- a/chainer.ipynb
+++ b/chainer.ipynb
@@ -6,7 +6,7 @@
       "name": "chainer.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMFP5zMz2b4kGCgxHR1A84Q",
+      "authorship_tag": "ABX9TyMHt7sG6DOIQ+2IbB1/imPU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3421,7 +3421,7 @@
         "# 関数の実行\n",
         "double(3)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3496,7 +3496,7 @@
         "id": "VDqeEdX5v9dj"
       },
       "source": [
-        "### 複数の引数をとる関数\n",
+        "**複数の引数をとる関数**\n",
         "\n",
         "複数の引数をとる関数を定義する場合は、関数名に続く `()` の中に、カンマ `,` 区切りで引数名を並べる。\n",
         "\n",
@@ -3617,7 +3617,7 @@
         "id": "A8XpuE_av9dn"
       },
       "source": [
-        "### 引数をとらない関数\n",
+        "**引数をとらない関数**\n",
         "\n",
         "引数をとらない関数を定義する場合でも、関数名の後に `()` を加える必要がある。\n",
         "\n",
@@ -3665,21 +3665,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bGnwUu-pVEvm"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "BZGSKTbcv9do"
       },
       "source": [
-        "### 引数のデフォルト値\n",
+        "**引数のデフォルト値**\n",
         "\n",
         "引数には、あらかじめ値を与えておくことができる。\n",
+        "\n",
         "これは、引数をとる関数を定義する際に、何も引数に値が渡されなかったときにどのような値がその引数に渡されたことにするかをあらかじめ決めておける機能で、その値のことを**デフォルト値**と呼ぶ。\n",
         "\n",
         "例えば、上の `hello()` と言う関数に、`message` と言う引数をもたせ、そこにデフォルト値を設定しておく。"
@@ -3769,9 +3761,9 @@
         "id": "DpwRYy4ov9dq"
       },
       "source": [
-        "### 返り値のある関数\n",
+        "**返り値のある関数**\n",
         "\n",
-        "上で定義した足し算を行う関数 `add()` では、計算結果を表示するだけで、計算結果を呼び出し元に戻していないでした。\n",
+        "上で定義した足し算を行う関数 `add()` では、計算結果を表示するだけで、計算結果を呼び出し元に戻していない。\n",
         "そのため、このままでは計算結果を関数の外から利用することができない。\n",
         "\n",
         "そこで、`add()` 関数の末尾に `return` 文を追加して、計算結果を呼び出し元に返すように変更してみる。"
@@ -3922,7 +3914,7 @@
         "id": "BJnkcc_Qv9dt"
       },
       "source": [
-        "### 変数のスコープ\n",
+        "**変数のスコープ**\n",
         "\n",
         "関数の中で定義した変数は基本的には関数の外では利用できない。\n",
         "例えば、以下の例を見てみよう。"
@@ -4079,17 +4071,10 @@
         "id": "FBe0bEnnVoE5"
       },
       "source": [
-        "## クラス\n",
+        "# クラス\n",
         "\n",
         "**オブジェクト指向プログラミング (object-oriented programming)** の特徴の一つである**クラス (class)** は、**オブジェクト (object)** を生成するための設計図にあたるものである。\n",
-        "まず、クラスとは何か、オブジェクトとは何かについて説明する。\n",
         "\n",
-        "ここで、唐突に感じられるかもしれないが、家を何軒も建てるときのことを考えよう。\n",
-        "それぞれの家の形や大きさ、構造は同じだが、表札に書かれている名前は異なっているとする。\n",
-        "この場合、家の設計図は同じだが、表札に何と書くか、において多少の変更がそれぞれの家ごとに必要となる。\n",
-        "この**全ての家に共通した設計図の役割を果たすのがクラス**である。\n",
-        "そして、設計図は、家として現実に存在しているわけではないが、個別の家は、現実に家としての**実体**を持って存在している。\n",
-        "よって、**設計図に基づいて個別の家を建てる**と言うことを抽象的に言うと、**クラスから実体を作成する**、となる。\n",
         "クラスから作成された実体のことを**インスタンス (instance)** または**オブジェクト (object)** とも呼び、**クラスから実体を作成する**と言う操作のことを**インスタンス化 (instantiation)** と呼ぶ。"
       ]
     },
@@ -4099,22 +4084,28 @@
         "id": "M1XEvf6Kv9dw"
       },
       "source": [
-        "### クラスの定義\n",
+        "**クラスの定義**\n",
         "\n",
         "それでは、家の設計図を表す `House` と言うクラスを定義してみる。\n",
+        "\n",
         "`House` クラスには、インスタンス化されたあとに、各インスタンス、すなわち誰か特定の人の家ごとに異なる値を持つ、`name_plate` と言う変数を持たせてみる。\n",
         "\n",
         "`name_plate` と言う変数には、個別の家の表札に表示するための文字列が与えられるが、クラスを定義する際には「`name_plate` と言う変数を持つことができる」ようにしておくだけでよく、**実際にその変数に何か具体的な値を与える必要はない。**\n",
+        "\n",
         "クラスは、**設計図**であればよく、具体的な値を持たせなくてもよいためである。\n",
+        "\n",
         "具体的な値は、個別の家を作成するとき、すなわちインスタンス化の際に与え、各インスタンスが `name_plate` と言う値に自分の家の表札の名前を保持するようにする。\n",
         "\n",
         "このような、インスタンスに属している変数を**属性 (attribute)** と呼ぶ。同様に、インスタンスから呼び出すことができる関数のことを**メソッド (method)** と呼ぶ。\n",
         "\n",
         "クラスは、以下のような構文を使って定義する。\n",
         "\n",
-        "![クラス](https://github.com/chainer/tutorials/blob/master/ja/images/02/02_11.png?raw=1)\n",
-        "\n",
-        "具体的には、以下のようになる。"
+        "具体的には、以下のようになる。\n",
+        "```\n",
+        "class クラス名: ヘッダー\n",
+        "    def メソッド名(引数1, ...): ヘッダー\n",
+        "        ブロック処理\n",
+        "```"
       ]
     },
     {
@@ -4125,13 +4116,21 @@
       "source": [
         "# クラスの定義\n",
         "class House:\n",
-        "\n",
         "    # __init__() メソッドの定義\n",
         "    def __init__(self, name):\n",
         "        self.name_plate = name"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8UZRqq826gyo"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4179,7 +4178,7 @@
       "source": [
         "`House` と言うクラスの `__init__()` メソッドに、`'Chainer'` と言う文字列を渡している。\n",
         "`my_house` が、`House` クラスから作成されたインスタンスである。\n",
-        "ここで、クラス定義では `__init__()` メソッドは `self` と `name` と言う 2 つの引数をとっていたが、呼び出しの際には `'Chainer'` と言う一つの引数しか与えていないでした。\n",
+        "ここで、クラス定義では `__init__()` メソッドは `self` と `name` と言う 2 つの引数をとっていたが、呼び出しの際には `'Chainer'` と言う一つの引数しか与えていない。\n",
         "この `'Chainer'` と言う文字列は、1 つ目の引数であるにも関わらず、`__init__()` メソッドの定義では 2 つ目の引数であった `name` に渡される。\n",
         "前述のように、**メソッドは、インスタンスから呼び出されるとき自動的に第一引数にそのインスタンスへの参照を渡す**ためである。\n",
         "この自動的に渡される自身への参照は、呼び出しの際には明示的に指定しない。\n",
@@ -4649,7 +4648,7 @@
         "id": "HcDciFKRv9d7"
       },
       "source": [
-        "今回はエラーが起きないでした。\n",
+        "今回はエラーが起きない。\n",
         "`Link` クラスの `__init__()`  メソッドの冒頭で、まず親クラスの `__init__()`  メソッドを実行し、`a`、`b` と言う属性を定義しているためである。\n",
         "\n",
         "あるクラスを継承して作られたクラスを、さらに継承して別のクラスを定義することもできる。"
