Colaboratory を使用して作成しました

--- a/python_graphtheory.ipynb
+++ b/python_graphtheory.ipynb
@@ -6,7 +6,7 @@
       "name": "python_graphtheory.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPdGxR/vZS3D1caF45zQVkP",
+      "authorship_tag": "ABX9TyPtRNOMPE8xo3Y5XTCQmfed",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,8 +62,8 @@
       "source": [
         "networkx で作ったグラフ理論のグラフを colab (jupyter) で表示するのに\n",
         "\n",
-        "1. matplotlib.pyplot の show () を使う方法\n",
-        "1. networkx の draw () を使う方法\n",
+        "1. matplotlib.pyplot の show を使う方法\n",
+        "1. networkx の draw を使う方法\n",
         "1. IPython.display の SVG と Image を使う方法\n",
         "1. pygraphviz を使う方法\n",
         "\n",
@@ -73,9 +73,9 @@
         "\n",
         "networkx の draw は裏で matplotlib を使っているので、出力は同じと思われる。\n",
         "\n",
-        "IPython.display の SVG と Image は matplotlib とは大きく印象の違う出力なので、用途はあるかもしれない。\n",
+        "IPython.display の SVG と Image は matplotlib とは印象の違う出力なので、用途はあるかもしれない。\n",
         "\n",
-        " pygraphviz はツールのインストールが必要なので現実的でない。"
+        "pygraphviz はツールのインストールが必要なので現実的でない。"
       ]
     },
     {
@@ -255,15 +255,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EHwOxWICQfNB"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "gLIvPd0iQTj6"
       },
       "source": [
@@ -344,6 +335,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EHwOxWICQfNB"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
